--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Shawn McCarthy",
+  "author": "Jingsheng Li",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "dotenv": "^5.0.0",
-    "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.10",
+    "npm": "^5.7.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
